--- a/index.html
+++ b/index.html
@@ -12,26 +12,12 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
-    <div class="container">
-      <div class="jumbotron">
-        <h1 class="display-4">Hello, world!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <p class="lead">
-          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-        </p>
-      </div>
-      <div>
-        <button type="button" class="btn btn-primary">Primary</button>
-      </div>
-    </div>
+    <h2 id="nombreUsuario"></h2>
 
-
-    
 
 
     <!-- Optional JavaScript; choose one of the two! -->
+    <script src="/js/page.js"></script>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
